tests/snapshot/error/regexp/stack_overflow.js
/a(?:x|){1000000000,1000000001}b/.exec("axxb");